<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_app"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        />
    <RelativeLayout
        android:layout_marginTop="100dp"
        android:layout_below="@id/tv_title"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_safety_enquiry"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/icon_safety_enquiry"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/safety_enquiry"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textSize="22sp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_power_transmission_specialty"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/icon_power_transmission_specialty"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power_transmission_specialty"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textSize="22sp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_district_manager"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/icon_district_manager"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/district_manager"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textSize="22sp"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_face_recognition"
            android:layout_marginTop="50dp"
            android:layout_below="@id/ll_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/icon_face_recognition"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/face_recognition"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textSize="22sp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_construction_vehicle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/icon_construction_vehicle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/construction_vehicle"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textSize="22sp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"/>

</RelativeLayout>